test/files/neg/t1872.check
t1872.scala:3: warning: fruitless type test: a value of type Int cannot also be a scala.util.Random
  def f(x: Int) = x.isInstanceOf[util.Random]
                                ^
t1872.scala:3: error: isInstanceOf cannot test if value types are references.
  def f(x: Int) = x.isInstanceOf[util.Random]
                    ^
one warning found
one error found
